cmake_minimum_required(VERSION 3.10)
project(Randy VERSION 0.0.1 LANGUAGES CXX C)

set (CMAKE_CXX_STANDARD 20)

set_property(GLOBAL PROPERTY CACHE CXX_STANDARD 20)
set_property(GLOBAL PROPERTY CACHE CXX_STANDARD_REQUIRED ON)

set (CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
set (CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})

set(ENGINE_INCLUDE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/engine/include)
include_directories(${ENGINE_INCLUDE_PATH})

add_subdirectory(engine)
add_subdirectory(testbed)
