project(Engine VERSION 0.0.1 LANGUAGES CXX)

set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS ON)

file(GLOB_RECURSE ENGINE_SRC_FILES LIST_DIRECTORIES false RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} src/**/*.c?? src/*.c??)
file(GLOB_RECURSE ENGINE_HEADER_FILES LIST_DIRECTORIES false RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} include/**/*.h include/*.h)

add_library(engine SHARED ${ENGINE_SRC_FILES} ${ENGINE_HEADER_FILES})

if(MSVC)
    set_property(TARGET engine PROPERTY VS_DEBUGGER_WORKING_DIRECTORY "${CMAKE_SOURCE_DIR}")
endif()

set_target_properties(engine PROPERTIES LINKER_LANGUAGE CXX)
